[package]
name = "result-like"
description = "Option/Result-like monad interface for your own enum"
version = "0.5.0"
homepage = "https://github.com/youknowone/result-like"
documentation = "http://docs.rs/result-like"
repository = "https://github.com/youknowone/result-like"
authors = ["Jeong YunWon <jeong+resultlike@youknowone.org>"]
edition = "2024"
license = "BSD-2-Clause-Views"
keywords = ["option", "result", "monad", "macro", "enum"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["derive/"]

[dependencies]
result-like-derive = { version = "0.5.0", path = "derive/" }

[dev-dependencies]
is-macro = "0.3"
