[package]
name = "result-like-derive"
version = "0.4.2"
edition = "2021"
description = "derive macros for result-like"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
pmutil = "0.5.3"
proc-macro2 = "1.0.29"
quote = "1.0.10"
syn = {version = "1.0.80", features = ["full", "extra-traits"]}
syn-ext = {version = "0.3.1", features = ["full"]}

[lib]
proc-macro = true
