[package]
name = "result-like-derive"
version = "0.5.0"
edition = "2021"
description = "derive macros for result-like"
repository = "https://github.com/youknowone/result-like"
license = "BSD-2-Clause-Views"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pmutil = "0.6"
proc-macro2 = "1.0.29"
quote = "1.0.10"
syn = {version = "2", features = ["full", "extra-traits"]}

[lib]
proc-macro = true
