[package]
name = "result-like-derive"
description = "derive macros for result-like"
version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pmutil = "0.6"
proc-macro2 = "1.0.29"
quote = "1.0.10"
syn = {version = "2", features = ["full", "extra-traits"]}

[lib]
proc-macro = true
